--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
         <artifactId>jackson-databind</artifactId>
         <version>2.9.10.8</version>
     </dependency>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>5.8.2</version>
+        <scope>test</scope>
+    </dependency>
 </dependencies>
 
     <build>
